--- a/src/ContentBundle/Resources/config/routing_api.yml
+++ b/src/ContentBundle/Resources/config/routing_api.yml
@@ -88,3 +88,9 @@ opifer_content_api_contenteditor_discard:
     methods: [POST]
     options:
         expose: true
+
+opifer_block_api_block:
+    path: /block
+    defaults: { _controller: OpiferContentBundle:Api/Block:block }
+    options:
+        expose: true
